--- a/chart/rancher-project-mapper/templates/role.yaml
+++ b/chart/rancher-project-mapper/templates/role.yaml
@@ -1,8 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
+kind: ClusterRole
 metadata:
   name: {{ include "rancher-project-mapper.fullname" . }}
-  namespace: cattle-system
 rules:
   - apiGroups: [""]
     resources: ["configmaps"]
