--- a/chart/rancher-project-mapper/Chart.yaml
+++ b/chart/rancher-project-mapper/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-appVersion: "1.0"
-description: A Helm chart for Kubernetes
+appVersion: "0.0.1"
+description: Automatic namespace to project mapping for Rancher clusters
 name: rancher-project-mapper
-version: 0.1.0
+version: 0.0.1
