--- a/chart/rancher-project-mapper/questions.yml
+++ b/chart/rancher-project-mapper/questions.yml
@@ -20,3 +20,49 @@ questions:
     required: false
     label: Image tag
     group: "Deployment Settings"
+  - variable: overrideChartNames
+    default: false
+    description: "Override Chart Names"
+    type: boolean
+    require: false
+    label: Override Chart Names
+    group: "Chart Settings"
+  - variable: nameOverride
+    default: ""
+    description: "Override the name of the chart"
+    type: string
+    required: false
+    label: Chart name override
+    group: "Chart Settings"
+    show_if: "overrideChartNames"
+  - variable: fullNameOverride
+    default: ""
+    description: "Override the full name of the chart"
+    type: string
+    required: false
+    label: Full chart name override
+    group: "Chart Settings"
+    show_if: "overrideChartNames"
+  - variable: overrideServiceSettings
+    default: false
+    descfiption: "Override Service Settings"
+    type: boolean
+    require: false
+    label: Override Service Settings
+    group: "Service Settings"
+  - variable: service.type
+    default: "ClusterIP"
+    description: "Type of the Service deployed"
+    type: string
+    required: false
+    label: Type of the Service deployed
+    group: "Service Settings"
+    show_if: overrideServiceSettings
+  - variable: service.port
+    default: 443"
+    description: "Port of the Service deployed"
+    type: int
+    required: false
+    label: Port of the Service deployed
+    group: "Service Settings"
+    show_if: overrideServiceSettings
