--- a/chart/rancher-project-mapper/questions.yml
+++ b/chart/rancher-project-mapper/questions.yml
@@ -20,7 +20,7 @@ questions:
   - variable: loglevel
     default: 1
     description: "Log level of the program"
-    tuype: int
+    type: int
     required: true
     group: "Rancher Project Mapper Configuration"
   - variable: configmap.name
