--- a/artifacts/examples/configmap.yaml
+++ b/artifacts/examples/configmap.yaml
@@ -1,16 +1,31 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: rancher-project-mapper
+  name: rpm
   namespace: cattle-system
 data:
   config: |-
     {
-      "rules": [
+      "defaults": {
+        "mapping": {
+          "cluster": "c-4mdbz",
+          "project": "p-n2d2p"
+        },
+        "creation": "allow"
+      },
+      "rules": {
+        "mapping": [
         {
-          "regex": "rancher-project-mapper-*",
-          "cluster": "c-12345",
-          "project": "p-12345"
+          "regex": "rpm-*",
+          "cluster": "c-4mdbz",
+          "project": "p-h75lh"
         }
-      ]
+        ],
+        "creation": [
+        {
+          "regex": "mpr-*",
+          "action": "deny"
+        }
+        ]
+      }
     }
